--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nebula App Data Deletion</title>
+  <title>RevSyntech App Data Deletion</title>
   <style>
     body { font-family: Arial, sans-serif; max-width: 600px; margin: 50px auto; line-height: 1.6; color: #333; }
     h1 { text-align: center; color: #2c3e50; }
@@ -13,8 +13,8 @@
   </style>
 </head>
 <body>
-  <h1>Nebula App Data Deletion</h1>
-  <p>Enter your Instagram username to permanently delete all your data from Nebula App:</p>
+  <h1>RevSyntech App Data Deletion</h1>
+  <p>Enter your Instagram username to permanently delete all your data from RevSyntech App:</p>
   <form id="deleteForm">
     <input type="text" name="instagram_username" placeholder="Instagram username" required />
     <button type="submit">Delete My Data</button>
